fixes alignment of social icons

--- a/src/App.css
+++ b/src/App.css
@@ -57,3 +57,10 @@
   text-align: center;
 }
 
+.section {
+  opacity: 0.4;
+}
+
+a {
+  padding-right: 1em; 
+}
